include/vision/vision_ui_item.h

typedef struct vision_ui_list_item_t {
    vision_ui_list_item_type_t type;
    bool icon_view_mode;

    const char* content;
    uint32_t text_scroll_anchor;

    float scroll_bar_top;
    float scroll_bar_top_velocity;
    float scroll_bar_top_trg;
    float scroll_bar_height;
    float scroll_bar_height_velocity;
    float scroll_bar_height_trg;
    float scroll_bar_scale_part;
    float scroll_bar_scale_part_trg;
    int16_t scroll_bar_top_px;
    int16_t scroll_bar_height_px;

    float y_list_item;
    float y_list_item_trg;

    float icon_scroll_offset;
    float icon_scroll_offset_velocity;
    float icon_scroll_offset_trg;

    uint8_t layer;
    uint8_t child_num;
    size_t capacity;
    struct vision_ui_list_item_t** child_list_item;
    struct vision_ui_list_item_t* parent;
} vision_ui_list_item_t;
typedef enum { VisionAllocMalloc, VisionAllocCalloc, VisionAllocFree } vision_alloc_op_t;
extern void vision_ui_allocator_set(void* (*allocator)(vision_alloc_op_t op, size_t size, size_t count, void* ptr));
extern void vision_ui_font_set(vision_ui_font_t font);
extern void vision_ui_font_set_title(vision_ui_font_t font);
extern void vision_ui_font_set_subtitle(vision_ui_font_t font);
extern vision_ui_font_t vision_ui_font_get();
extern vision_ui_font_t vision_ui_font_get_title();
extern vision_ui_font_t vision_ui_font_get_subtitle();
extern bool vision_ui_exit_animation_is_finished();
extern void vision_ui_exit_animation_set_is_finished();
extern void vision_ui_exit_animation_start();
extern bool vision_ui_enter_animation_is_finished();
extern void vision_ui_enter_animation_set_is_finished();
extern void vision_ui_enter_animation_start();
extern bool vision_ui_root_item_set(vision_ui_list_item_t* item);