bindings/rust/native/include/vision/vision_ui_draw_driver.h

/**
 * Returns the current high-level input action from the backend.
 *
 * @param ui UI instance whose driver state should be queried. Must not be `NULL`.
 * @return The current mapped action for this frame.
 */
extern vision_ui_action_t vision_ui_driver_action_get(const vision_ui_t* ui);
/**
 * Returns a monotonic millisecond tick value.
 *
 * @param ui UI instance whose driver state should be queried. Must not be `NULL`.
 * @return A monotonic time value in milliseconds.
 */
extern uint32_t vision_ui_driver_ticks_ms_get(const vision_ui_t* ui);
/**
 * Sleeps or yields for roughly the requested number of milliseconds.
 *
 * @param ui UI instance whose driver should perform the delay. Must not be `NULL`.
 * @param ms Approximate delay duration in milliseconds.
 */
extern void vision_ui_driver_delay(const vision_ui_t* ui, uint32_t ms);
/**
 * Stores the backend driver handle on the UI instance.
 *
 * @param ui UI instance to configure. Must not be `NULL`.
 * @param driver Backend-specific handle to store. This pointer is borrowed, not copied.
 */
extern void vision_ui_driver_bind(vision_ui_t* ui, void* driver);
/**
 * Activates a backend font for subsequent text operations.
 *
 * @param ui UI instance whose backend font should change. Must not be `NULL`.
 * @param font Font configuration to activate.
 */
extern void vision_ui_driver_font_set(vision_ui_t* ui, vision_ui_font_t font);
/**
 * Returns the backend font that is currently active.
 *
 * @param ui UI instance whose backend font should be queried. Must not be `NULL`.
 * @return A copy of the active backend font configuration. Its `font` field may be `NULL` if no font is active yet.
 */
extern vision_ui_font_t vision_ui_driver_font_get(const vision_ui_t* ui);