bindings/rust/native/include/vision/vision_ui_core.h

typedef enum vision_ui_core_init_result_t {
    /// The core runtime state was initialized successfully.
    VisionUiCoreInitOk = 0,
    /// Core initialization requires a root item to be attached first.
    VisionUiCoreInitRootItemNotSet,
} vision_ui_core_init_result_t;
/**
 * Initializes a caller-owned UI instance before first use.
 *
 * @param ui UI instance to initialize. Must not be `NULL`.
 */
extern void vision_ui_init(vision_ui_t* ui);
/**
 * Allocates and initializes a heap-owned UI instance.
 *
 * @return A non-`NULL` UI instance on success, or `NULL` when heap allocation fails.
 */
extern vision_ui_t* vision_ui_create();
/**
 * Destroys a UI instance and any library-owned items created for it.
 *
 * If `ui` was created by `vision_ui_create()`, this also frees the UI object itself. If `ui` was initialized with
 * `vision_ui_init()`, the caller still owns the storage for the struct.
 *
 * @param ui UI instance to destroy, or `NULL` to do nothing.
 */
extern void vision_ui_destroy(vision_ui_t* ui);
/**
 * Marks the UI as active and prepares the renderer to start drawing.
 *
 * @param ui UI instance to activate. Must not be `NULL`.
 */
extern void vision_ui_render_init(vision_ui_t* ui);
/**
 * Initializes selector, camera, and list runtime state after the tree is built.
 *
 * The root tree should already be attached with `vision_ui_root_item_set()` before this is called.
 *
 * @param ui UI instance to initialize. Must not be `NULL`.
 * @return `VisionUiCoreInitOk` on success.
 * @return `VisionUiCoreInitRootItemNotSet` when no root item has been attached yet.
 */
extern vision_ui_core_init_result_t vision_ui_core_init(vision_ui_t* ui);
/**
 * Shows a startup bitmap for a fixed duration before the normal UI loop takes over.
 *
 * @param ui UI instance to configure. Must not be `NULL`.
 * @param bmp Monochrome bitmap pointer to display. The pointer is borrowed, not copied.
 * @param span Display duration in milliseconds.
 */
extern void vision_ui_start_logo_set(vision_ui_t* ui, const uint8_t* bmp, uint32_t span);
/**
 * Runs one frame of UI logic and rendering.
 *
 * @param ui UI instance to update and render. Must not be `NULL`.
 */
extern void vision_ui_step_render(vision_ui_t* ui);
/**
 * Returns whether the UI has completed its exit flow.
 *
 * @param ui UI instance to query. Must not be `NULL`.
 * @return `true` when the UI is no longer active; otherwise `false`.
 */
extern bool vision_ui_is_exited(const vision_ui_t* ui);
/**
 * Returns whether background interaction should be paused behind the UI.
 *
 * @param ui UI instance to query. Must not be `NULL`.
 * @return `true` when background interaction should be frozen; otherwise `false`.
 */
extern bool vision_ui_is_background_frozen(const vision_ui_t* ui);
/**
 * Sets the small utility font.
 *
 * @param ui UI instance to configure. Must not be `NULL`.
 * @param font Font configuration to store.
 */
extern void vision_ui_minifont_set(vision_ui_t* ui, vision_ui_font_t font);
/**
 * Returns the current small utility font.
 *
 * @param ui UI instance to query. Must not be `NULL`.
 * @return A copy of the currently configured minifont. Its `font` field may be `NULL` if no font was configured yet.
 */
extern vision_ui_font_t vision_ui_minifont_get(const vision_ui_t* ui);