bindings/rust/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vision_ui_t"][::std::mem::size_of::<vision_ui_t>() - 472usize];
    ["Alignment of vision_ui_t"][::std::mem::align_of::<vision_ui_t>() - 8usize];
    ["Offset of field: vision_ui_t::is_in_vision_ui"]
        [::std::mem::offset_of!(vision_ui_t, is_in_vision_ui) - 0usize];
    ["Offset of field: vision_ui_t::is_background_frozen"]
        [::std::mem::offset_of!(vision_ui_t, is_background_frozen) - 1usize];
    ["Offset of field: vision_ui_t::owns_self"]
        [::std::mem::offset_of!(vision_ui_t, owns_self) - 2usize];
    ["Offset of field: vision_ui_t::logo"][::std::mem::offset_of!(vision_ui_t, logo) - 8usize];
    ["Offset of field: vision_ui_t::logo_span"]
        [::std::mem::offset_of!(vision_ui_t, logo_span) - 16usize];
    ["Offset of field: vision_ui_t::last_tick"]
        [::std::mem::offset_of!(vision_ui_t, last_tick) - 20usize];
    ["Offset of field: vision_ui_t::logo_finished"]
        [::std::mem::offset_of!(vision_ui_t, logo_finished) - 24usize];
    ["Offset of field: vision_ui_t::logo_started"]
        [::std::mem::offset_of!(vision_ui_t, logo_started) - 25usize];
    ["Offset of field: vision_ui_t::logo_start_time"]
        [::std::mem::offset_of!(vision_ui_t, logo_start_time) - 28usize];
    ["Offset of field: vision_ui_t::exit_animation_finished"]
        [::std::mem::offset_of!(vision_ui_t, exit_animation_finished) - 32usize];
    ["Offset of field: vision_ui_t::enter_animation_finished"]
        [::std::mem::offset_of!(vision_ui_t, enter_animation_finished) - 33usize];
    ["Offset of field: vision_ui_t::exit_elapsed_ms"]
        [::std::mem::offset_of!(vision_ui_t, exit_elapsed_ms) - 36usize];
    ["Offset of field: vision_ui_t::running_exit"]
        [::std::mem::offset_of!(vision_ui_t, running_exit) - 40usize];
    ["Offset of field: vision_ui_t::enter_elapsed_ms"]
        [::std::mem::offset_of!(vision_ui_t, enter_elapsed_ms) - 44usize];
    ["Offset of field: vision_ui_t::running_enter"]
        [::std::mem::offset_of!(vision_ui_t, running_enter) - 48usize];
    ["Offset of field: vision_ui_t::minifont"]
        [::std::mem::offset_of!(vision_ui_t, minifont) - 56usize];
    ["Offset of field: vision_ui_t::font"][::std::mem::offset_of!(vision_ui_t, font) - 72usize];
    ["Offset of field: vision_ui_t::title_font"]
        [::std::mem::offset_of!(vision_ui_t, title_font) - 88usize];
    ["Offset of field: vision_ui_t::subtitle_font"]
        [::std::mem::offset_of!(vision_ui_t, subtitle_font) - 104usize];
    ["Offset of field: vision_ui_t::allocator"]
        [::std::mem::offset_of!(vision_ui_t, allocator) - 120usize];
    ["Offset of field: vision_ui_t::notification"]
        [::std::mem::offset_of!(vision_ui_t, notification) - 128usize];
    ["Offset of field: vision_ui_t::alert"][::std::mem::offset_of!(vision_ui_t, alert) - 192usize];
    ["Offset of field: vision_ui_t::selector"]
        [::std::mem::offset_of!(vision_ui_t, selector) - 232usize];
    ["Offset of field: vision_ui_t::camera"]
        [::std::mem::offset_of!(vision_ui_t, camera) - 304usize];
    ["Offset of field: vision_ui_t::root_item"]
        [::std::mem::offset_of!(vision_ui_t, root_item) - 336usize];
    ["Offset of field: vision_ui_t::owned_item_head"]
        [::std::mem::offset_of!(vision_ui_t, owned_item_head) - 344usize];
    ["Offset of field: vision_ui_t::list_icon"]
        [::std::mem::offset_of!(vision_ui_t, list_icon) - 352usize];
    ["Offset of field: vision_ui_t::driver"]
        [::std::mem::offset_of!(vision_ui_t, driver) - 440usize];
    ["Offset of field: vision_ui_t::driver_current_font"]
        [::std::mem::offset_of!(vision_ui_t, driver_current_font) - 448usize];
    ["Offset of field: vision_ui_t::driver_str_top"]
        [::std::mem::offset_of!(vision_ui_t, driver_str_top) - 464usize];
    ["Offset of field: vision_ui_t::driver_str_bottom"]
        [::std::mem::offset_of!(vision_ui_t, driver_str_bottom) - 465usize];
};
unsafe extern "C" {
    pub fn vision_ui_smoothstep(t: f32) -> f32;
    pub fn vision_ui_animation_s_curve(pos: *mut f32, pos_trg: f32, speed: f32, delta_ms: f32);
    pub fn vision_ui_animation_2nd_ode_no_overshoot(
        pos: *mut f32,
        velocity: *mut f32,
        post_trg: f32,
        speed: f32,
        delta_ms: f32,
    );
    pub fn vision_ui_animation_2nd_ode_slight_overshoot(
        pos: *mut f32,
        velocity: *mut f32,
        post_trg: f32,
        speed: f32,
        delta_ms: f32,
    );
    #[doc = " Initializes a caller-owned UI instance before first use.\n\n @param ui UI instance to initialize. Must not be `NULL`."]
    pub fn vision_ui_init(ui: *mut vision_ui_t);
    #[doc = " Allocates and initializes a heap-owned UI instance.\n\n @return A non-`NULL` UI instance on success, or `NULL` when heap allocation fails."]
    pub fn vision_ui_create() -> *mut vision_ui_t;
    #[doc = " Destroys a UI instance and any library-owned items created for it.\n\n If `ui` was created by `vision_ui_create()`, this also frees the UI object itself. If `ui` was initialized with\n `vision_ui_init()`, the caller still owns the storage for the struct.\n\n @param ui UI instance to destroy, or `NULL` to do nothing."]
    pub fn vision_ui_destroy(ui: *mut vision_ui_t);
    #[doc = " Marks the UI as active and prepares the renderer to start drawing.\n\n @param ui UI instance to activate. Must not be `NULL`."]
    pub fn vision_ui_render_init(ui: *mut vision_ui_t);
    #[doc = " Initializes selector, camera, and list runtime state after the tree is built.\n\n The root tree should already be attached with `vision_ui_root_item_set()` before this is called.\n\n @param ui UI instance to initialize. Must not be `NULL`."]
    pub fn vision_ui_core_init(ui: *mut vision_ui_t);
    #[doc = " Shows a startup bitmap for a fixed duration before the normal UI loop takes over.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param bmp Monochrome bitmap pointer to display. The pointer is borrowed, not copied.\n @param span Display duration in milliseconds."]
    pub fn vision_ui_start_logo_set(ui: *mut vision_ui_t, bmp: *const u8, span: u32);
    #[doc = " Runs one frame of UI logic and rendering.\n\n @param ui UI instance to update and render. Must not be `NULL`."]
    pub fn vision_ui_step_render(ui: *mut vision_ui_t);
    #[doc = " Returns whether the UI has completed its exit flow.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return `true` when the UI is no longer active; otherwise `false`."]
    pub fn vision_ui_is_exited(ui: *const vision_ui_t) -> bool;
    #[doc = " Returns whether background interaction should be paused behind the UI.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return `true` when background interaction should be frozen; otherwise `false`."]
    pub fn vision_ui_is_background_frozen(ui: *const vision_ui_t) -> bool;
    #[doc = " Installs a custom allocator used for subsequent library-managed allocations.\n\n Constructor-created items allocated after this call will use the supplied allocator, and `vision_ui_destroy()` will\n free those library-owned items through the same allocator.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param allocator Allocation callback to install, or `NULL` to use the default libc allocator."]
    pub fn vision_ui_allocator_set(ui: *mut vision_ui_t, allocator: vision_ui_allocator_t);
    #[doc = " Sets the small utility font.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param font Font configuration to store."]
    pub fn vision_ui_minifont_set(ui: *mut vision_ui_t, font: vision_ui_font_t);
    #[doc = " Sets the main body font.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param font Font configuration to store."]
    pub fn vision_ui_font_set(ui: *mut vision_ui_t, font: vision_ui_font_t);
    #[doc = " Sets the title font.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param font Font configuration to store."]
    pub fn vision_ui_font_set_title(ui: *mut vision_ui_t, font: vision_ui_font_t);
    #[doc = " Sets the subtitle font.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param font Font configuration to store."]
    pub fn vision_ui_font_set_subtitle(ui: *mut vision_ui_t, font: vision_ui_font_t);
    #[doc = " Returns the current small utility font.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return A copy of the currently configured minifont. Its `font` field may be `NULL` if no font was configured yet."]
    pub fn vision_ui_minifont_get(ui: *const vision_ui_t) -> vision_ui_font_t;
    #[doc = " Returns the current main body font.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return A copy of the currently configured body font. Its `font` field may be `NULL` if no font was configured yet."]
    pub fn vision_ui_font_get(ui: *const vision_ui_t) -> vision_ui_font_t;
    #[doc = " Returns the current title font.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return A copy of the currently configured title font. Its `font` field may be `NULL` if no font was configured yet."]
    pub fn vision_ui_font_get_title(ui: *const vision_ui_t) -> vision_ui_font_t;
    #[doc = " Returns the current subtitle font.\n\n @param ui UI instance to query. Must not be `NULL`.\n @return A copy of the currently configured subtitle font. Its `font` field may be `NULL` if no font was configured\n yet."]
    pub fn vision_ui_font_get_subtitle(ui: *const vision_ui_t) -> vision_ui_font_t;
    pub fn vision_ui_exit_animation_is_finished(ui: *const vision_ui_t) -> bool;
    pub fn vision_ui_exit_animation_set_is_finished(ui: *mut vision_ui_t);
    pub fn vision_ui_exit_animation_start(ui: *mut vision_ui_t);
    pub fn vision_ui_enter_animation_is_finished(ui: *const vision_ui_t) -> bool;
    pub fn vision_ui_enter_animation_set_is_finished(ui: *mut vision_ui_t);
    pub fn vision_ui_enter_animation_start(ui: *mut vision_ui_t);
    #[doc = " Returns the current high-level input action from the backend.\n\n @param ui UI instance whose driver state should be queried. Must not be `NULL`.\n @return The current mapped action for this frame."]
    pub fn vision_ui_driver_action_get(ui: *const vision_ui_t) -> vision_ui_action_t;
    #[doc = " Returns a monotonic millisecond tick value.\n\n @param ui UI instance whose driver state should be queried. Must not be `NULL`.\n @return A monotonic time value in milliseconds."]
    pub fn vision_ui_driver_ticks_ms_get(ui: *const vision_ui_t) -> u32;
    #[doc = " Sleeps or yields for roughly the requested number of milliseconds.\n\n @param ui UI instance whose driver should perform the delay. Must not be `NULL`.\n @param ms Approximate delay duration in milliseconds."]
    pub fn vision_ui_driver_delay(ui: *const vision_ui_t, ms: u32);
    #[doc = " Stores the backend driver handle on the UI instance.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param driver Backend-specific handle to store. This pointer is borrowed, not copied."]
    pub fn vision_ui_driver_bind(ui: *mut vision_ui_t, driver: *mut ::std::os::raw::c_void);
    #[doc = " Activates a backend font for subsequent text operations.\n\n @param ui UI instance whose backend font should change. Must not be `NULL`.\n @param font Font configuration to activate."]
    pub fn vision_ui_driver_font_set(ui: *mut vision_ui_t, font: vision_ui_font_t);
    #[doc = " Returns the backend font that is currently active.\n\n @param ui UI instance whose backend font should be queried. Must not be `NULL`.\n @return A copy of the active backend font configuration. Its `font` field may be `NULL` if no font is active yet."]
    pub fn vision_ui_driver_font_get(ui: *const vision_ui_t) -> vision_ui_font_t;
